implement EncryptUtil using AES256TextEncryptor